@@ -488,13 +488,13 @@ Sei sicuro?</translation>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1842"/>
-        <location filename="../qjackctlGraph.cpp" line="1969"/>
+        <location filename="../qjackctlGraph.cpp" line="1856"/>
+        <location filename="../qjackctlGraph.cpp" line="1983"/>
         <source>Connect</source>
         <translation>Connetti</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="2041"/>
+        <location filename="../qjackctlGraph.cpp" line="2055"/>
         <source>Disconnect</source>
         <translation>Disconnetti</translation>
     </message>
